# redesign

./: CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  stack.yaml
sys/sort/: sort.cabal
sys/sort/src/: Sort.hs
sys/txs-core/: txs-core.cabal
sys/txs-core/src/Test/: TorXakis.hs
sys/txs-core/src/Test/TorXakis/: Action.hs  ConsoleRunner.hs  Core.hs  Reporter.hs  SUTConnection.hs  Specification.hs  Tester.hs  Verdict.hs
sys/txs-core/src/Test/TorXakis/Examples/: ConsoleRunner.hs
sys/txs-core/test/Test/: TorXakisSpec.hs
sys/txs-core/test/Test/TorXakis/: CoreSpec.hs
