name:                sort
version:             0.1.0.0
synopsis:            Sort Definitions
description:         -
homepage:            -
license:             BSD3
license-file:        license.txt
author:              Pierre van de Laar
maintainer:          pierre.vandelaar@tno.nl
copyright:           TNO
category:            Web
build-type:          Simple
cabal-version:       >=1.10

    
library
  hs-source-dirs:     src
  exposed-modules:    Sort
  other-modules:    
  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math
  build-depends:      base
                    , QuickCheck
  default-language:   Haskell2010


test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Test.hs 
  other-modules:
  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N                     
  build-depends:      base
                    , containers
                    , MissingH
                    , QuickCheck
                    , sort
  default-language:   Haskell2010                    