name:                txs-core
version:             0.1.0.0
synopsis:            Sort Definitions
description:         TorXakis core.
homepage:            -
license:             BSD3
license-file:        LICENSE
author:              Jan Tretmans
                   , Pierre van de Laar
maintainer:          pierre.vandelaar@tno.nl
copyright:           TNO
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:     src
  exposed-modules:    Test.TorXakis
  
                    , Test.TorXakis.Tester
                    
                    , Test.TorXakis.Specification
                    , Test.TorXakis.SUTConnection
                    , Test.TorXakis.Reporter
                    
                    , Test.TorXakis.Action
                    , Test.TorXakis.Verdict
                    
                    , Test.TorXakis.Examples.ConsoleRunner                    
  ghc-options:        -Werror -Wall -O2 -optc-O3 -optc-ffast-math
  build-depends:      base
                    , containers
                    , text
                    , mtl
                    , pipes
                    , transformers
                    , extra
                    , async
                    , stm
                    , random

  default-language:   Haskell2010

test-suite txs-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec

                     , txs-core
  other-modules:     Test.TorXakis.CoreSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror -Wall -O2 -optc-O3 -optc-ffast-math
  default-language:    Haskell2010
